# respatch-gnome

./: .gitignore  LICENSE  README.md  flathub-audit-2025.md  generated-sources.json  meson.build  package-lock.json  package.json  pr_message.md  publish_requirements.md  sk.mostka.Respatch.yml  sk.tito10047.respatch.yml  test-about-size.js  test-about.js  test-dbus.js  test2.js  tsconfig.json
.junie/: AGENTS.md
.junie/plans/: csrf-session-fix.md  flathub-publish-blockers-fix.md  main-ts-refactor-mvvm.md  server-switcher-and-management.md
data/: gschemas.compiled  meson.build  org.respatch.hq.gschema.xml  respatch.gresource.xml  screencast.webm  sk.mostka.Respatch.Daemon.desktop  sk.mostka.Respatch.desktop  sk.mostka.Respatch.gschema.xml  sk.mostka.Respatch.metainfo.xml  sk.tito10047.respatch.desktop  sk.tito10047.respatch.metainfo.xml
locale/sk/LC_MESSAGES/: respatch.mo
po/: sk.po
src/: Application.ts  WindowManager.ts  daemon.ts  gettext.ts  main.ts  respatch-daemon.sh  respatch.sh
src/libs/: fetch.ts
src/models/: ApiResponse.ts  FailedMessage.ts  Project.ts  RecentMessage.ts  Transport.ts
src/services/: ApiClient.ts  BrowserService.ts  LoggerService.ts  NotificationService.ts  SettingsService.ts
src/stores/: ProjectStore.ts
src/ui/: add_project_dialog.blp  failed_message_row.blp  failed_transport_row.blp  main.blp  manage_servers.blp  recent_message_row.blp  settings.blp  style.css  transport_row.blp  window.blp
src/ui/dialogs/: AddProjectDialog.ts
src/ui/widgets/: FailedMessageRow.ts  FailedTransportRow.ts  MessageActionHandler.ts  PollingSection.ts  RecentMessageRow.ts  TransportRow.ts
src/ui/windows/: MainWindow.ts  ManageServersWindow.ts  SettingsWindow.ts  WelcomeWindow.ts
src/utils/: format.ts
systemd/: respatch-daemon.service
tests/: ApiClient.test.ts  LoggerService.test.ts  NotificationService.test.ts  ProjectStore.test.ts  SettingsService.test.ts  dummy.test.ts  format.test.ts
tests/mocks/: handlers.ts
